# firstdjango

./: CMakeLists.txt  lib.hpp  main.cpp  test.cpp
